@@ -19,13 +19,10 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
-
 
 @Service
 @RequiredArgsConstructor
@@ -49,43 +46,29 @@ public class MarketIndexSyncService {
     private static final int TOTAL_COUNT = 100;
     private static final int TOTAL_PAGES = (int) Math.ceil((double) TOTAL_COUNT / 100);
 
-    /**
-     * 1. 외부 API로부터 시장 지수 데이터 수집 및 저장
-     * 2. 수집된 데이터 기반으로 SyncJob 및 AutoSyncConfig 생성 및 저장
-     */
-
     @Transactional
     public List<SyncJobDto> createSyncJobsAndConfigs() {
-        // Step 1: 시장 지수 fetch + 저장
         fetchAndStoreMarketIndices();
 
-        // Step 2: IndexInfo 전체 조회
         List<IndexInfo> indexInfos = indexInfoRepository.findAll();
 
-        // Step 3: SyncJob 생성 및 저장
         List<SyncJob> syncJobs = indexInfos.stream()
-                .map(OpenApIIndexInfoMapper::toSyncJob)
-                .collect(Collectors.toList());
+            .map(OpenApIIndexInfoMapper::toSyncJob)
+            .collect(Collectors.toList());
         List<SyncJob> savedJobs = syncJobRepository.saveAll(syncJobs);
 
-        // Step 4: AutoSyncConfig 생성 및 저장
         List<AutoSyncConfig> autoSyncConfigs = indexInfos.stream()
-                .filter(indexInfo -> !autoSyncConfigRepository.existsByIndexInfoId(indexInfo.getId()))
-                .map(OpenApIIndexInfoMapper::toAutoSyncConfig)
-                .collect(Collectors.toList());
-        if (!autoSyncConfigs.isEmpty()) {
-            autoSyncConfigRepository.saveAll(autoSyncConfigs);
-        }
+            .filter(indexInfo -> {
+              return false;
+            })
+            .map(indexInfo -> OpenApIIndexInfoMapper.toAutoSyncConfig(indexInfo, false))  // enabled 값을 false로 설정
+            .toList();
 
-        // Step 5: 저장된 SyncJob을 DTO로 변환하여 반환
         return savedJobs.stream()
-                .map(SyncJobMapper::toSyncJobDto)
-                .collect(Collectors.toList());
+            .map(SyncJobMapper::toSyncJobDto)
+            .collect(Collectors.toList());
     }
 
-    /**
-     * 시장 지수 데이터 Fetch 및 IndexInfo 저장
-     */
     public void fetchAndStoreMarketIndices() {
         Set<String> seenKeys = new HashSet<>();
         int createdCount = 0;
@@ -95,16 +78,16 @@ public class MarketIndexSyncService {
         for (int page = 1; page <= TOTAL_PAGES; page++) {
             try {
                 String apiUrl = baseUrl +
-                        "?serviceKey=" + serviceKey +
-                        "&resultType=json" +
-                        "&pageNo=" + page +
-                        "&numOfRows=" + numOfRows;
+                    "?serviceKey=" + serviceKey +
+                    "&resultType=json" +
+                    "&pageNo=" + page +
+                    "&numOfRows=" + numOfRows;
 
                 URI uri = new URI(apiUrl);
                 String responseString = restTemplate.getForObject(uri, String.class);
 
                 JsonNode itemNode = objectMapper.readTree(responseString)
-                        .path("response").path("body").path("items").path("item");
+                    .path("response").path("body").path("items").path("item");
 
                 if (itemNode.isMissingNode() || itemNode.isNull()) {
                     continue;
@@ -139,49 +122,50 @@ public class MarketIndexSyncService {
 
     }
 
-    /**
-     * 단일 시장 지수 아이템을 저장 또는 업데이트
-     *
-     * @return 1 = 신규 저장 / 2 = 업데이트 / 0 = 건너뜀
-     */
     private int processItem(JsonNode item, Set<String> seenKeys) {
-        // 1. 기본 키 생성 (중복 방지용)
         String indexClassification = item.path("idxCsf").asText();
         String indexName = item.path("idxNm").asText();
         String key = indexClassification + "|" + indexName;
 
-        // 2. 이미 처리한 키는 건너뜀
         if (!seenKeys.add(key)) {
             return 0;
         }
 
-        // 3. employedItemCount 검증
         int employedItemCount = item.path("epyItmsCnt").asInt();
         if (employedItemCount <= 0) {
             return 0;
         }
 
-        // 4. DTO 생성
         ExternalIndexInfoDto dto = ExternalIndexInfoDto.builder()
-                .indexClassification(indexClassification)
-                .indexName(indexName)
-                .employedItemCount(employedItemCount)
-                .basePointInTimeRaw(item.path("basPntm").asText())
-                .basId(item.path("basIdx").asInt())
-                .build();
+            .indexClassification(indexClassification)
+            .indexName(indexName)
+            .employedItemCount(employedItemCount)
+            .basePointInTimeRaw(item.path("basPntm").asText())
+            .basId(item.path("basIdx").asInt())
+            .build();
 
-        // 5. 기존 데이터 있는지 확인 후 저장 또는 업데이트
         Optional<IndexInfo> existingOpt = indexInfoRepository
-                .findByIndexClassificationAndIndexName(dto.indexClassification(), dto.indexName());
+            .findByIndexClassificationAndIndexName(dto.indexClassification(), dto.indexName());
 
         if (existingOpt.isPresent()) {
             IndexInfo indexInfo = existingOpt.get();
             indexInfo.updateFromDto(dto);
             indexInfoRepository.save(indexInfo);
-            return 2; // 수정
+
+            if (!autoSyncConfigRepository.existsByIndexInfoId(indexInfo.getId())) {
+                AutoSyncConfig autoSyncConfig = OpenApIIndexInfoMapper.toAutoSyncConfig(indexInfo, false);
+
+                autoSyncConfigRepository.save(autoSyncConfig);
+            }
+
+            return 2;
         } else {
             IndexInfo indexInfo = OpenApIIndexInfoMapper.toIndexInfo(dto);
             indexInfoRepository.save(indexInfo);
+
+            AutoSyncConfig autoSyncConfig = OpenApIIndexInfoMapper.toAutoSyncConfig(indexInfo, false);
+            autoSyncConfigRepository.save(autoSyncConfig);
+
             return 1; // 신규
         }
     }
